@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.talend.sdk.component.form.model.uischema;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonMap;
 import static java.util.Collections.unmodifiableMap;
-import static java.util.stream.Collectors.toList;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -95,7 +94,7 @@ public class UiSchema {
                 .withWidget(widget)
                 .withItemWidget(itemWidget)
                 .withType(type)
-                .withItems(items == null ? null : items.stream().map(it -> it.copy(frozenStructure)).collect(toList()))
+                .withItems(items == null ? null : items.stream().map(it -> it.copy(frozenStructure)).toList())
                 .withOptions(options)
                 .withAutoFocus(autoFocus)
                 .withDisabled(disabled)
