@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@ package org.talend.sdk.component.runtime.beam.spi.record;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -37,7 +36,7 @@ class AvroSchemaCacheTest {
         final List<Thread> threads =
                 schemas.stream() //
                         .map((SchemaImpl s) -> new Thread(() -> this.treat(s))) //
-                        .collect(Collectors.toList()); //
+                        .toList(); //
         threads.forEach(Thread::start);
         threads.forEach((Thread t) -> {
             try {
