@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,7 +28,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import javax.json.Json;
@@ -115,7 +114,7 @@ class SchemaImplTest {
         Assertions.assertTrue(entries.contains(this.data2));
 
         Assertions.assertEquals(4, schema.getAllEntries().count());
-        final List<Entry> metaEntries = schema.getAllEntries().filter(Entry::isMetadata).collect(Collectors.toList());
+        final List<Entry> metaEntries = schema.getAllEntries().filter(Entry::isMetadata).toList();
         Assertions.assertEquals(2, metaEntries.size());
         Assertions.assertTrue(metaEntries.contains(this.meta1));
         Assertions.assertTrue(metaEntries.contains(this.meta2));
@@ -460,7 +459,6 @@ class SchemaImplTest {
         final Schema emptySchema = new BuilderImpl() //
                 .withType(Type.RECORD) //
                 .build();
-        List<Entry> ordered = emptySchema.getEntriesOrdered();
         RecordBuilderFactory factory = new RecordBuilderFactoryImpl("test");
         Record record = factory.newRecordBuilder(emptySchema).build();
         Assertions.assertNotNull(record);
