@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,11 +37,9 @@ import static org.talend.sdk.component.runtime.manager.ComponentManager.Componen
 import static org.talend.sdk.component.runtime.manager.reflect.Constructors.findConstructor;
 import static org.talend.sdk.component.runtime.manager.util.Lazy.lazy;
 
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.ObjectStreamException;
 import java.io.Serializable;
 import java.lang.annotation.Annotation;
@@ -115,6 +113,7 @@ import org.apache.xbean.finder.archive.CompositeArchive;
 import org.apache.xbean.finder.archive.FileArchive;
 import org.apache.xbean.finder.archive.FilteredArchive;
 import org.apache.xbean.finder.archive.JarArchive;
+import org.apache.xbean.finder.filter.ContainsFilter;
 import org.apache.xbean.finder.filter.ExcludeIncludeFilter;
 import org.apache.xbean.finder.filter.Filter;
 import org.apache.xbean.finder.filter.FilterList;
@@ -200,6 +199,14 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class ComponentManager implements AutoCloseable {
 
+    public static final String PROPERTY_CLASSES_AND_PACKAGES =
+            "talend.component.manager.classloader.container.classesAndPackages";
+
+    public static final String PROPERTY_PARENT_RESOURCES =
+            "talend.component.manager.classloader.container.parentResources";
+
+    protected static final String[] KNOWN_PARENT_RESOURCES = { "/xmlMappings/" };
+
     private static class SingletonHolder {
 
         protected static final AtomicReference<ComponentManager> CONTEXTUAL_INSTANCE = new AtomicReference<>();
@@ -213,11 +220,15 @@ public class ComponentManager implements AutoCloseable {
                 {
                     info("ComponentManager version: " + ComponentManagerVersion.VERSION);
                     info("Creating the contextual ComponentManager instance " + getIdentifiers());
-
-                    parallelIf(Boolean.getBoolean("talend.component.manager.plugins.parallel"),
-                            container.getDefinedNestedPlugin().stream().filter(p -> !hasPlugin(p)))
-                            .forEach(this::addPlugin);
-                    info("Components: " + availablePlugins());
+                    try {
+                        parallelIf(Boolean.getBoolean("talend.component.manager.plugins.parallel"),
+                                container.getDefinedNestedPlugin().stream().filter(p -> !hasPlugin(p)))
+                                .forEach(this::addPlugin);
+                        info("Components: " + availablePlugins());
+                    } catch (Exception e) {
+                        info("Failed to load plugins from plugins.properties: " + e.getMessage());
+                        log.debug("Failed to load plugins from plugins.properties.", e);
+                    }
                 }
 
                 @Override
@@ -284,7 +295,7 @@ public class ComponentManager implements AutoCloseable {
         }
 
         static {
-            ComponentManager manager = SingletonHolder.buildNewComponentManager();
+            ComponentManager manager = SingletonHolder.buildNewComponentManager(); // NOSONAR
         }
 
     }
@@ -313,6 +324,8 @@ public class ComponentManager implements AutoCloseable {
     // tcomp (org.talend + javax.annotation + jsonp) + logging (slf4j) are/can be provided service
     // + tcomp "runtime" indeed (invisible from the components but required for the runtime
     private final Filter classesFilter;
+
+    private final Filter resourcesFilter;
 
     private final ParameterModelService parameterModelService;
 
@@ -403,13 +416,13 @@ public class ComponentManager implements AutoCloseable {
         final ClassLoader tccl = Thread.currentThread().getContextClassLoader();
 
         internationalizationServiceFactory = new InternationalizationServiceFactory(getLocalSupplier());
-        customizers = toStream(loadServiceProviders(Customizer.class, tccl)).collect(toList()); // must stay first
+        customizers = toStream(loadServiceProviders(Customizer.class, tccl)).toList(); // must stay first
         if (!customizers.isEmpty()) {
             customizers.forEach(c -> c.setCustomizers(customizers));
         }
         if (!Boolean.getBoolean("talend.component.manager.classpathcontributor.skip")) {
             classpathContributors =
-                    toStream(loadServiceProviders(ContainerClasspathContributor.class, tccl)).collect(toList());
+                    toStream(loadServiceProviders(ContainerClasspathContributor.class, tccl)).toList();
         } else {
             classpathContributors = emptyList();
         }
@@ -428,30 +441,28 @@ public class ComponentManager implements AutoCloseable {
                 .distinct()
                 .map(PrefixFilter::new)
                 .toArray(Filter[]::new));
-
+        resourcesFilter = new FilterList(additionalParentResources()
+                .distinct()
+                .map(ContainsFilter::new)
+                .toArray(Filter[]::new));
         jsonpProvider = loadJsonProvider();
         jsonbProvider = loadJsonbProvider();
         // these factories have memory caches so ensure we reuse them properly
-        jsonpGeneratorFactory = JsonGeneratorFactory.class
-                .cast(javaProxyEnricherFactory
-                        .asSerializable(tccl, null, JsonGeneratorFactory.class.getName(),
-                                jsonpProvider.createGeneratorFactory(emptyMap())));
-        jsonpReaderFactory = JsonReaderFactory.class
-                .cast(javaProxyEnricherFactory
-                        .asSerializable(tccl, null, JsonReaderFactory.class.getName(),
-                                jsonpProvider.createReaderFactory(emptyMap())));
-        jsonpBuilderFactory = JsonBuilderFactory.class
-                .cast(javaProxyEnricherFactory
-                        .asSerializable(tccl, null, JsonBuilderFactory.class.getName(),
-                                jsonpProvider.createBuilderFactory(emptyMap())));
-        jsonpParserFactory = JsonParserFactory.class
-                .cast(javaProxyEnricherFactory
-                        .asSerializable(tccl, null, JsonParserFactory.class.getName(),
-                                jsonpProvider.createParserFactory(emptyMap())));
-        jsonpWriterFactory = JsonWriterFactory.class
-                .cast(javaProxyEnricherFactory
-                        .asSerializable(tccl, null, JsonWriterFactory.class.getName(),
-                                jsonpProvider.createWriterFactory(emptyMap())));
+        jsonpGeneratorFactory = (JsonGeneratorFactory) javaProxyEnricherFactory
+                .asSerializable(tccl, null, JsonGeneratorFactory.class.getName(),
+                        jsonpProvider.createGeneratorFactory(emptyMap()));
+        jsonpReaderFactory = (JsonReaderFactory) javaProxyEnricherFactory
+                .asSerializable(tccl, null, JsonReaderFactory.class.getName(),
+                        jsonpProvider.createReaderFactory(emptyMap()));
+        jsonpBuilderFactory = (JsonBuilderFactory) javaProxyEnricherFactory
+                .asSerializable(tccl, null, JsonBuilderFactory.class.getName(),
+                        jsonpProvider.createBuilderFactory(emptyMap()));
+        jsonpParserFactory = (JsonParserFactory) javaProxyEnricherFactory
+                .asSerializable(tccl, null, JsonParserFactory.class.getName(),
+                        jsonpProvider.createParserFactory(emptyMap()));
+        jsonpWriterFactory = (JsonWriterFactory) javaProxyEnricherFactory
+                .asSerializable(tccl, null, JsonWriterFactory.class.getName(),
+                        jsonpProvider.createWriterFactory(emptyMap()));
 
         logInfoLevelMapping = findLogInfoLevel();
 
@@ -462,6 +473,7 @@ public class ComponentManager implements AutoCloseable {
         migrationHandlerFactory = new MigrationHandlerFactory(reflections);
 
         final Predicate<String> isContainerClass = name -> isContainerClass(classesFilter, name);
+        final Predicate<String> isParentResource = name -> isParentResource(resourcesFilter, name);
         final ContainerManager.ClassLoaderConfiguration defaultClassLoaderConfiguration =
                 ContainerManager.ClassLoaderConfiguration
                         .builder()
@@ -469,6 +481,7 @@ public class ComponentManager implements AutoCloseable {
                         .parentClassesFilter(isContainerClass)
                         .classesFilter(isContainerClass.negate())
                         .supportsResourceDependencies(true)
+                        .parentResourcesFilter(isParentResource)
                         .create();
         this.container = new ContainerManager(ContainerManager.DependenciesResolutionConfiguration
                 .builder()
@@ -506,8 +519,8 @@ public class ComponentManager implements AutoCloseable {
         this.extensions = toStream(loadServiceProviders(ComponentExtension.class, tccl))
                 .filter(ComponentExtension::isActive)
                 .sorted(comparing(ComponentExtension::priority))
-                .collect(toList());
-        this.transformers = extensions.stream().flatMap(e -> e.getTransformers().stream()).collect(toList());
+                .toList();
+        this.transformers = extensions.stream().flatMap(e -> e.getTransformers().stream()).toList();
 
         final Iterator<RecordBuilderFactoryProvider> recordBuilderFactoryIterator =
                 ServiceLoader.load(RecordBuilderFactoryProvider.class, tccl).iterator();
@@ -607,10 +620,21 @@ public class ComponentManager implements AutoCloseable {
         return Stream
                 .concat(customizers.stream().flatMap(Customizer::containerClassesAndPackages),
                         ofNullable(
-                                System.getProperty("talend.component.manager.classloader.container.classesAndPackages"))
+                                System.getProperty(PROPERTY_CLASSES_AND_PACKAGES))
                                 .map(s -> s.split(","))
                                 .map(Stream::of)
                                 .orElseGet(Stream::empty));
+    }
+
+    private Stream<String> additionalParentResources() {
+        return Stream.concat(
+                Stream.of(KNOWN_PARENT_RESOURCES),
+                Stream.concat(customizers.stream().flatMap(Customizer::parentResources),
+                        ofNullable(
+                                System.getProperty(PROPERTY_PARENT_RESOURCES))
+                                .map(s -> s.split(","))
+                                .map(Stream::of)
+                                .orElseGet(Stream::empty)));
     }
 
     public static Path findM2() {
@@ -713,7 +737,7 @@ public class ComponentManager implements AutoCloseable {
                         return id;
                     })
                     .filter(Objects::nonNull)
-                    .collect(toList());
+                    .toList();
         }
         return emptyList();
     }
@@ -783,14 +807,12 @@ public class ComponentManager implements AutoCloseable {
      */
     public static Map<String, String> jsonToMap(final JsonValue jsonValue, final String path) {
         final Map<String, String> result = new HashMap<>();
-        if (jsonValue instanceof JsonObject) {
-            JsonObject jsonObj = (JsonObject) jsonValue;
+        if (jsonValue instanceof JsonObject jsonObj) {
             for (String key : jsonObj.keySet()) {
                 String newPath = path.isEmpty() ? key : path + "." + key;
                 result.putAll(jsonToMap(jsonObj.get(key), newPath));
             }
-        } else if (jsonValue instanceof JsonArray) {
-            JsonArray jsonArray = (JsonArray) jsonValue;
+        } else if (jsonValue instanceof JsonArray jsonArray) {
             for (int i = 0; i < jsonArray.size(); i++) {
                 String newPath = path + "[" + i + "]";
                 result.putAll(jsonToMap(jsonArray.get(i), newPath));
@@ -851,7 +873,7 @@ public class ComponentManager implements AutoCloseable {
             final int version, final Map<String, String> configuration) {
         return findComponentInternal(plugin, name, componentType, version, configuration)
                 // unwrap to access the actual instance which is the desired one
-                .map(i -> Delegated.class.isInstance(i) ? Delegated.class.cast(i).getDelegate() : i);
+                .map(i -> i instanceof Delegated delegated ? delegated.getDelegate() : i);
     }
 
     private Optional<Object> findComponentInternal(final String plugin, final String name,
@@ -904,13 +926,28 @@ public class ComponentManager implements AutoCloseable {
                 final Enumeration<URL> componentMarkers =
                         Thread.currentThread().getContextClassLoader().getResources("TALEND-INF/dependencies.txt");
                 while (componentMarkers.hasMoreElements()) {
-                    File file = Files.toFile(componentMarkers.nextElement());
-                    if (file.getName().equals("dependencies.txt") && file.getParentFile() != null
-                            && file.getParentFile().getName().equals("TALEND-INF")) {
-                        file = file.getParentFile().getParentFile();
-                    }
-                    if (!hasPlugin(container.buildAutoIdFromName(file.getName()))) {
-                        addPlugin(file.getAbsolutePath());
+                    final URL marker = componentMarkers.nextElement();
+                    File file = Files.toFile(marker);
+                    if (file != null) {
+                        if (file.getName().equals("dependencies.txt")
+                                && file.getParentFile() != null
+                                && file.getParentFile().getName().equals("TALEND-INF")
+                                && file.getParentFile().getParentFile() != null) {
+                            file = file.getParentFile().getParentFile();
+                        }
+                        if (!hasPlugin(ContainerManager.buildAutoIdFromName(file.getName()))) {
+                            addPlugin(file.getAbsolutePath());
+                        }
+                    } else {
+                        // lookup nested jar
+                        if (marker != null && "jar".equals(marker.getProtocol())) {
+                            final String urlFile = marker.getFile();
+                            final String jarPath = urlFile.substring(0, urlFile.lastIndexOf("!"));
+                            final String jarFilePath = jarPath.substring(jarPath.lastIndexOf("/") + 1);
+                            if (!hasPlugin(ContainerManager.buildAutoIdFromName(jarFilePath))) {
+                                addPlugin(jarPath);
+                            }
+                        }
                     }
                 }
             } catch (final IOException e) {
@@ -991,6 +1028,8 @@ public class ComponentManager implements AutoCloseable {
                 return pluginId;
             }
 
+            // Container lifecycle is owned by ContainerManager (registered on create, closed via removePlugin)
+            @SuppressWarnings({ "resource", "java:S2095" })
             final String id = this.container
                     .builder(pluginRootFile)
                     .withCustomizer(createContainerCustomizer(pluginRootFile))
@@ -1009,6 +1048,8 @@ public class ComponentManager implements AutoCloseable {
     }
 
     public String addWithLocationPlugin(final String location, final String pluginRootFile) {
+        // Container lifecycle is owned by ContainerManager (registered on create, closed via removePlugin)
+        @SuppressWarnings({ "resource", "java:S2095" })
         final String id = this.container
                 .builder(pluginRootFile)
                 .withCustomizer(createContainerCustomizer(location))
@@ -1020,6 +1061,8 @@ public class ComponentManager implements AutoCloseable {
     }
 
     protected String addPlugin(final String forcedId, final String pluginRootFile) {
+        // Container lifecycle is owned by ContainerManager (registered on create, closed via removePlugin)
+        @SuppressWarnings({ "resource", "java:S2095" })
         final String id = this.container
                 .builder(forcedId, pluginRootFile)
                 .withCustomizer(createContainerCustomizer(forcedId))
@@ -1035,7 +1078,7 @@ public class ComponentManager implements AutoCloseable {
                 .stream()
                 .flatMap(it -> it.findContributions(pluginId).stream())
                 .distinct()
-                .collect(toList())/* keep order */;
+                .toList()/* keep order */;
     }
 
     public void removePlugin(final String id) {
@@ -1044,6 +1087,10 @@ public class ComponentManager implements AutoCloseable {
     }
 
     protected boolean isContainerClass(final Filter filter, final String name) {
+        return name != null && filter.accept(name);
+    }
+
+    protected boolean isParentResource(final Filter filter, final String name) {
         return name != null && filter.accept(name);
     }
 
@@ -1113,7 +1160,7 @@ public class ComponentManager implements AutoCloseable {
             configurations
                     .addAll(toStream(
                             loadServiceProviders(LocalConfiguration.class, LocalConfiguration.class.getClassLoader()))
-                            .collect(toList()));
+                            .toList());
         }
         configurations.addAll(asList(new LocalConfiguration() {
 
@@ -1254,7 +1301,7 @@ public class ComponentManager implements AutoCloseable {
             }
         };
 
-        abstract public Map<String, ? extends ComponentFamilyMeta.BaseMeta> findMeta(ComponentFamilyMeta family);
+        public abstract Map<String, ? extends ComponentFamilyMeta.BaseMeta> findMeta(ComponentFamilyMeta family);
 
         abstract Class<? extends Lifecycle> runtimeType();
     }
@@ -1296,7 +1343,7 @@ public class ComponentManager implements AutoCloseable {
         @Override
         public void onCreate(final Container container) {
             final ConfigurableClassLoader loader = container.getLoader();
-            final OriginalId originalId = OriginalId.class.cast(container.get(OriginalId.class));
+            final OriginalId originalId = (OriginalId) container.get(OriginalId.class);
             final Map<java.lang.reflect.Type, Optional<Converter>> xbeanConverterCache = new ConcurrentHashMap<>();
 
             final AnnotationFinder finder;
@@ -1304,42 +1351,16 @@ public class ComponentManager implements AutoCloseable {
             try {
                 String alreadyScannedClasses = null;
                 Filter filter = KnownClassesFilter.INSTANCE;
-                // we need to scan the nested repository
-                if (container.hasNestedRepository()) {
-                    try {
-                        final Enumeration<URL> urls = loader.getResources("TALEND-INF/scanning.properties");
+                try (final InputStream containerFilterConfig =
+                        container.getLoader().getResourceAsStream("TALEND-INF/scanning.properties")) {
+                    if (containerFilterConfig != null) {
                         final Properties config = new Properties();
-                        while (urls.hasMoreElements()) {
-                            final URL url = urls.nextElement();
-                            // ensure we scan the correct classes of plugin in the nested repository
-                            if ("nested".equals(url.getProtocol())
-                                    && url.getPath().contains(container.getRootModule())) {
-                                try (final BufferedReader reader =
-                                        new BufferedReader(new InputStreamReader(url.openStream()))) {
-                                    config.load(reader);
-                                    filter = createScanningFilter(config);
-                                    alreadyScannedClasses = config.getProperty("classes.list");
-                                    break;
-                                }
-                            }
-                        }
-                    } catch (IOException e) {
-                        log.info("[onCreate] Can't read nested scanning.properties: {}", e.getMessage());
+                        config.load(containerFilterConfig);
+                        filter = createScanningFilter(config);
+                        alreadyScannedClasses = config.getProperty("classes.list");
                     }
-                }
-                // normal scanning or nested scan failed
-                if (alreadyScannedClasses == null) {
-                    try (final InputStream containerFilterConfig =
-                            container.getLoader().getResourceAsStream("TALEND-INF/scanning.properties")) {
-                        if (containerFilterConfig != null) {
-                            final Properties config = new Properties();
-                            config.load(containerFilterConfig);
-                            filter = createScanningFilter(config);
-                            alreadyScannedClasses = config.getProperty("classes.list");
-                        }
-                    } catch (final IOException e) {
-                        log.debug(e.getMessage(), e);
-                    }
+                } catch (final IOException e) {
+                    log.debug(e.getMessage(), e);
                 }
 
                 AnnotationFinder optimizedFinder = null;
@@ -1352,7 +1373,7 @@ public class ComponentManager implements AutoCloseable {
                                 } catch (final ClassNotFoundException e) {
                                     throw new IllegalArgumentException(e);
                                 }
-                            }).collect(toList());
+                            }).toList();
                     if (KnownClassesFilter.INSTANCE == filter) {
                         archive = new ClassesArchive(/* empty */);
                         optimizedFinder = new AnnotationFinder(archive) {
@@ -1371,7 +1392,7 @@ public class ComponentManager implements AutoCloseable {
                                             .flatMap(client -> Stream
                                                     .of(client.getMethods())
                                                     .filter(m -> m.isAnnotationPresent(annotation)))
-                                            .collect(toList());
+                                            .toList();
                                 }
                                 return super.findAnnotatedMethods(annotation);
                             }
@@ -1399,9 +1420,9 @@ public class ComponentManager implements AutoCloseable {
                     }
                 } : optimizedFinder;
             } finally {
-                if (AutoCloseable.class.isInstance(archive)) {
+                if (archive instanceof AutoCloseable autoCloseable) {
                     try {
-                        AutoCloseable.class.cast(archive).close();
+                        autoCloseable.close();
                     } catch (final Exception e) {
                         log.warn(e.getMessage());
                     }
@@ -1479,7 +1500,7 @@ public class ComponentManager implements AutoCloseable {
                     .filter(HttpClient.class::isAssignableFrom) // others are created manually
                     .forEach(proxy -> {
                         final Object instance =
-                                HttpClientFactory.class.cast(services.get(HttpClientFactory.class)).create(proxy, null);
+                                ((HttpClientFactory) services.get(HttpClientFactory.class)).create(proxy, null);
                         services.put(proxy, instance);
                         registry.getServices().add(new ServiceMeta(instance, emptyList()));
                     });
@@ -1494,7 +1515,7 @@ public class ComponentManager implements AutoCloseable {
                                             .createServiceInstance(container.getLoader(), container.getId(), service),
                                     container.getLoader())));
             // now we created all instances we can inject *then* postconstruct
-            final Injector injector = Injector.class.cast(services.get(Injector.class));
+            final Injector injector = (Injector) services.get(Injector.class);
             services.putAll(userServices);
             userServices.forEach((service, instance) -> {
                 injector.inject(instance);
@@ -1509,7 +1530,7 @@ public class ComponentManager implements AutoCloseable {
                                         .anyMatch(a -> a.annotationType().isAnnotationPresent(ActionType.class)))
                                 .map(serviceMethod -> createServiceMeta(container, services, componentDefaults, service,
                                         instance, serviceMethod, service))
-                                .collect(toList())));
+                                .toList()));
                 info("Added @Service " + service + " for container-id=" + container.getId());
             });
 
@@ -1646,7 +1667,7 @@ public class ComponentManager implements AutoCloseable {
 
             String component = "";
             try {
-                component = ofNullable(String.class.cast(marker.annotationType().getMethod("family").invoke(marker)))
+                component = ofNullable((String) marker.annotationType().getMethod("family").invoke(marker))
                         .filter(c -> !c.isEmpty())
                         .orElseGet(components::family);
             } catch (final NoSuchMethodException e) {
@@ -1663,7 +1684,7 @@ public class ComponentManager implements AutoCloseable {
 
             final String name = Stream.of("name", "value").map(mName -> {
                 try {
-                    return String.class.cast(marker.annotationType().getMethod(mName).invoke(marker));
+                    return (String) marker.annotationType().getMethod(mName).invoke(marker);
                 } catch (final IllegalAccessException e) {
                     throw new IllegalStateException(e);
                 } catch (final InvocationTargetException e) {
@@ -1699,11 +1720,10 @@ public class ComponentManager implements AutoCloseable {
                                             ofNullable(serviceMethod.getDeclaringClass().getPackage())
                                                     .map(Package::getName)
                                                     .orElse(""),
-                                            new BaseParameterEnricher.Context(LocalConfiguration.class
-                                                    .cast(container
-                                                            .get(AllServices.class)
-                                                            .getServices()
-                                                            .get(LocalConfiguration.class))))),
+                                            new BaseParameterEnricher.Context((LocalConfiguration) container
+                                                    .get(AllServices.class)
+                                                    .getServices()
+                                                    .get(LocalConfiguration.class)))),
                     invoker);
         }
 
@@ -1750,11 +1770,11 @@ public class ComponentManager implements AutoCloseable {
                     return true;
                 }).map(nested -> {
                     if ("nested".equals(nested.getProtocol())
-                            || (nested.getPath() != null && nested.getPath().contains("!/MAVEN-INF/repository/"))) {
+                            || (nested.getPath() != null && nested.getPath().contains(NESTED_MAVEN_REPOSITORY))) {
                         JarInputStream jarStream = null;
                         try {
                             jarStream = new JarInputStream(nested.openStream());
-                            log.debug("Found a nested resource for " + nested);
+                            log.debug("Found a nested resource for {}", nested);
                             return new NestedJarArchive(nested, jarStream, loader);
                         } catch (final IOException e) {
                             if (jarStream != null) {
@@ -1772,7 +1792,7 @@ public class ComponentManager implements AutoCloseable {
                     } catch (final MalformedURLException e) {
                         throw new IllegalStateException(e);
                     }
-                }).collect(toList()));
+                }).toList());
             } catch (final IOException e) {
                 throw new IllegalArgumentException("Error scanning " + module, e);
             }
@@ -1780,16 +1800,16 @@ public class ComponentManager implements AutoCloseable {
         }
 
         private URL archiveToUrl(final Archive mainArchive) {
-            if (JarArchive.class.isInstance(mainArchive)) {
-                return JarArchive.class.cast(mainArchive).getUrl();
-            } else if (FileArchive.class.isInstance(mainArchive)) {
+            if (mainArchive instanceof JarArchive jarArchive) {
+                return jarArchive.getUrl();
+            } else if (mainArchive instanceof FileArchive fileArchive) {
                 try {
-                    return FileArchive.class.cast(mainArchive).getDir().toURI().toURL();
+                    return fileArchive.getDir().toURI().toURL();
                 } catch (final MalformedURLException e) {
                     throw new IllegalStateException(e);
                 }
-            } else if (NestedJarArchive.class.isInstance(mainArchive)) {
-                return NestedJarArchive.class.cast(mainArchive).getRootMarker();
+            } else if (mainArchive instanceof NestedJarArchive entries) {
+                return entries.getRootMarker();
             }
             return null;
         }
@@ -1809,21 +1829,23 @@ public class ComponentManager implements AutoCloseable {
             final URL nestedJar =
                     loader.getParent().getResource(ConfigurableClassLoader.NESTED_MAVEN_REPOSITORY + module);
             if (nestedJar != null) {
-                InputStream nestedStream = null;
-                final JarInputStream jarStream;
+                final InputStream nestedStream;
                 try {
                     nestedStream = nestedJar.openStream();
-                    jarStream = new JarInputStream(nestedStream);
+                } catch (final IOException e) {
+                    throw new IllegalStateException(e);
+                }
+                try {
+                    final JarInputStream jarStream = new JarInputStream(nestedStream);
                     log.debug("Found a nested resource for " + module);
                     return new NestedJarArchive(nestedJar, jarStream, loader);
                 } catch (final IOException e) {
-                    if (nestedStream != null) {
-                        try { // normally not needed
-                            nestedStream.close();
-                        } catch (final IOException e1) {
-                            // no-op
-                        }
+                    try { // normally not needed
+                        nestedStream.close();
+                    } catch (final IOException e1) {
+                        // no-op
                     }
+                    throw new IllegalStateException(e);
                 }
             }
             throw new IllegalArgumentException(
@@ -1908,8 +1930,8 @@ public class ComponentManager implements AutoCloseable {
                     () -> {
                         final List<ParameterMeta> params = parameterModelService
                                 .buildParameterMetas(constructor, getPackage(type),
-                                        new BaseParameterEnricher.Context(LocalConfiguration.class
-                                                .cast(services.getServices().get(LocalConfiguration.class))));
+                                        new BaseParameterEnricher.Context((LocalConfiguration) services.getServices()
+                                                .get(LocalConfiguration.class)));
                         if (infinite) {
                             if (partitionMapper.stoppable()) {
                                 addInfiniteMapperBuiltInParameters(type, params);
@@ -1962,8 +1984,8 @@ public class ComponentManager implements AutoCloseable {
             final Supplier<List<ParameterMeta>> parameterMetas = lazy(() -> executeInContainer(plugin,
                     () -> parameterModelService
                             .buildParameterMetas(constructor, getPackage(type),
-                                    new BaseParameterEnricher.Context(LocalConfiguration.class
-                                            .cast(services.getServices().get(LocalConfiguration.class))))));
+                                    new BaseParameterEnricher.Context((LocalConfiguration) services.getServices()
+                                            .get(LocalConfiguration.class)))));
             final Function<Map<String, String>, Object[]> parameterFactory =
                     createParametersFactory(plugin, constructor, services.getServices(), parameterMetas);
             final String name = of(emitter.name()).filter(n -> !n.isEmpty()).orElseGet(type::getName);
@@ -2000,7 +2022,7 @@ public class ComponentManager implements AutoCloseable {
             final Supplier<List<ParameterMeta>> parameterMetas = lazy(() -> executeInContainer(plugin, () -> {
                 final List<ParameterMeta> params = parameterModelService
                         .buildParameterMetas(constructor, getPackage(type), new BaseParameterEnricher.Context(
-                                LocalConfiguration.class.cast(services.getServices().get(LocalConfiguration.class))));
+                                (LocalConfiguration) services.getServices().get(LocalConfiguration.class)));
                 addProcessorsBuiltInParameters(type, params);
                 return params;
             }));
@@ -2069,10 +2091,10 @@ public class ComponentManager implements AutoCloseable {
 
             final StreamingMaxRecordsParamBuilder paramBuilder = new StreamingMaxRecordsParamBuilder(root,
                     type.getSimpleName(),
-                    LocalConfiguration.class.cast(services.services.get(LocalConfiguration.class)));
+                    (LocalConfiguration) services.services.get(LocalConfiguration.class));
             final ParameterMeta maxRecords = paramBuilder.newBulkParameter();
             final ParameterMeta maxDuration = new StreamingMaxDurationMsParamBuilder(root, type.getSimpleName(),
-                    LocalConfiguration.class.cast(services.services.get(LocalConfiguration.class))).newBulkParameter();
+                    (LocalConfiguration) services.services.get(LocalConfiguration.class)).newBulkParameter();
             final String layoutOptions = maxRecords.getName() + "|" + maxDuration.getName();
             final String layoutType = paramBuilder.getLayoutType();
             if (layoutType == null) {
@@ -2114,7 +2136,7 @@ public class ComponentManager implements AutoCloseable {
 
             if (Stream.of(type.getMethods()).anyMatch(p -> p.isAnnotationPresent(AfterGroup.class))) {
                 final MaxBatchSizeParamBuilder paramBuilder = new MaxBatchSizeParamBuilder(root, type.getSimpleName(),
-                        LocalConfiguration.class.cast(services.services.get(LocalConfiguration.class)));
+                        (LocalConfiguration) services.services.get(LocalConfiguration.class));
                 final ParameterMeta maxBatchSize = paramBuilder.newBulkParameter();
                 if (maxBatchSize != null) {
                     final String layoutType = paramBuilder.getLayoutType();
@@ -2147,8 +2169,8 @@ public class ComponentManager implements AutoCloseable {
             final Supplier<List<ParameterMeta>> parameterMetas = lazy(() -> executeInContainer(plugin,
                     () -> parameterModelService
                             .buildParameterMetas(constructor, getPackage(type),
-                                    new BaseParameterEnricher.Context(LocalConfiguration.class
-                                            .cast(services.getServices().get(LocalConfiguration.class))))));
+                                    new BaseParameterEnricher.Context((LocalConfiguration) services.getServices()
+                                            .get(LocalConfiguration.class)))));
             final Function<Map<String, String>, Object[]> parameterFactory =
                     createParametersFactory(plugin, constructor, services.getServices(), parameterMetas);
             final String name = of(processor.name()).filter(n -> !n.isEmpty()).orElseGet(type::getName);
@@ -2201,8 +2223,8 @@ public class ComponentManager implements AutoCloseable {
             return this.component == null || !component.equals(this.component.getName())
                     ? (this.component = new ComponentFamilyMeta(plugin, asList(components.categories()),
                             iconFinder.findIcon(familyAnnotationElement), comp,
-                            Class.class.isInstance(familyAnnotationElement)
-                                    ? getPackage(Class.class.cast(familyAnnotationElement))
+                            familyAnnotationElement instanceof Class aClass
+                                    ? getPackage(aClass)
                                     : ""))
                     : this.component;
         }
@@ -2210,7 +2232,7 @@ public class ComponentManager implements AutoCloseable {
         private Serializable doInvoke(final Constructor<?> constructor, final Object[] args) {
             return executeInContainer(plugin, () -> {
                 try {
-                    return Serializable.class.cast(constructor.newInstance(args));
+                    return (Serializable) constructor.newInstance(args);
                 } catch (final IllegalAccessException e) {
                     throw new IllegalStateException(e);
                 } catch (final ClassCastException e) {
@@ -2236,6 +2258,14 @@ public class ComponentManager implements AutoCloseable {
         Stream<String> containerClassesAndPackages();
 
         /**
+         * @return a stream of string representing resources. They will be considered
+         * as loaded from the "container" (ComponentManager loader) and not the components classloaders.
+         */
+        default Stream<String> parentResources() {
+            return Stream.empty();
+        }
+
+        /**
          * @return advanced toggle to ignore built-in beam exclusions and let this customizer override them.
          */
         default boolean ignoreBeamClassLoaderExclusions() {
@@ -2243,7 +2273,7 @@ public class ComponentManager implements AutoCloseable {
         }
 
         /**
-         * Disable default built-in component classpath building mecanism. This is useful when relying on
+         * Disable default built-in component classpath building mechanism. This is useful when relying on
          * a custom {@link ContainerClasspathContributor} handling it.
          *
          * @return true if the default dependencies descriptor (TALEND-INF/dependencies.txt) must be ignored.
