@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 package org.talend.sdk.component.runtime.manager.service;
 
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 
 import java.io.File;
 import java.io.IOException;
@@ -31,8 +30,10 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.function.Function;
 
+import org.talend.sdk.component.api.service.dependency.ClassLoaderDefinition;
 import org.talend.sdk.component.api.service.dependency.Resolver;
 import org.talend.sdk.component.classloader.ConfigurableClassLoader;
+import org.talend.sdk.component.container.ContainerManager.ClassLoaderConfiguration;
 import org.talend.sdk.component.dependencies.maven.Artifact;
 import org.talend.sdk.component.dependencies.maven.MvnDependencyListLocalRepositoryResolver;
 import org.talend.sdk.component.runtime.serialization.SerializableService;
@@ -48,12 +49,29 @@ public class ResolverImpl implements Resolver, Serializable {
 
     @Override
     public ClassLoaderDescriptor mapDescriptorToClassLoader(final InputStream descriptor) {
-        final Collection<URL> urls = new ArrayList<>();
-        final Collection<String> nested = new ArrayList<>();
-        final Collection<String> resolved = new ArrayList<>();
         final ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
         final ClassLoader loader =
                 ofNullable(classLoader).map(ClassLoader::getParent).orElseGet(ClassLoader::getSystemClassLoader);
+
+        return mapDescriptorToClassLoader(descriptor,
+                ClassLoaderConfiguration.builder()
+                        .parent(loader)
+                        .classesFilter(it -> true)
+                        .parentClassesFilter(it -> false)
+                        .supportsResourceDependencies(true)
+                        .parentResourcesFilter(it -> true)
+                        .create());
+    }
+
+    @Override
+    public ClassLoaderDescriptor mapDescriptorToClassLoader(final InputStream descriptor,
+            final ClassLoaderDefinition configuration) {
+        final Collection<URL> urls = new ArrayList<>();
+        final Collection<String> nested = new ArrayList<>();
+        final Collection<String> resolved = new ArrayList<>();
+        final ClassLoader parent = configuration.getParent() != null ? configuration.getParent()
+                : ofNullable(Thread.currentThread().getContextClassLoader()).map(ClassLoader::getParent)
+                        .orElseGet(ClassLoader::getSystemClassLoader);
         try {
             new MvnDependencyListLocalRepositoryResolver(null, fileResolver)
                     .resolveFromDescriptor(descriptor)
@@ -67,16 +85,21 @@ public class ResolverImpl implements Resolver, Serializable {
                             } catch (final MalformedURLException e) {
                                 throw new IllegalStateException(e);
                             }
-                        } else if (loader.getResource("MAVEN-INF/repository/" + path) != null) {
+                        } else if (parent.getResource("MAVEN-INF/repository/" + path) != null) {
                             nested.add(path);
                             resolved.add(artifact.toCoordinate());
                         } // else will be missing
                     });
             final ConfigurableClassLoader volatileLoader = new ConfigurableClassLoader(plugin + "#volatile-resolver",
-                    urls.toArray(new URL[0]), classLoader, it -> false, it -> true, nested.toArray(new String[0]),
-                    ConfigurableClassLoader.class.isInstance(classLoader)
-                            ? ConfigurableClassLoader.class.cast(classLoader).getJvmMarkers()
-                            : new String[] { "" });
+                    urls.toArray(new URL[0]),
+                    parent,
+                    ofNullable(configuration.getParentClassesFilter()).orElse(it -> false),
+                    ofNullable(configuration.getClassesFilter()).orElse(it -> true),
+                    nested.toArray(new String[0]),
+                    parent instanceof ConfigurableClassLoader configurableClassLoader
+                            ? configurableClassLoader.getJvmMarkers()
+                            : new String[] { "" },
+                    ofNullable(configuration.getParentResourcesFilter()).orElse(it -> true));
             return new ClassLoaderDescriptorImpl(volatileLoader, resolved);
         } catch (final IOException e) {
             throw new IllegalArgumentException(e);
@@ -91,7 +114,7 @@ public class ResolverImpl implements Resolver, Serializable {
                     .map(Artifact::toPath)
                     .map(fileResolver)
                     .map(Path::toFile)
-                    .collect(toList());
+                    .toList();
         } catch (final IOException e) {
             throw new IllegalArgumentException(e);
         }
