@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 package org.talend.sdk.component.runtime.manager.interceptor;
 
 import static java.lang.Thread.sleep;
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.talend.sdk.component.runtime.manager.test.Serializer.roundTrip;
 
@@ -49,7 +48,7 @@ class InterceptorTest {
             final List<Object> collect = manager
                     .find(c -> c.get(ComponentManager.AllServices.class).getServices().values().stream())
                     .filter(c -> c.getClass().getName().endsWith("SuperService$$TalendServiceProxy"))
-                    .collect(toList());
+                    .toList();
             assertEquals(1, collect.size());
 
             final Object instance = collect.iterator().next();
