@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ import static java.util.Collections.singletonMap;
 import static java.util.Optional.ofNullable;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.function.Function.identity;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 import java.io.BufferedOutputStream;
@@ -119,7 +118,7 @@ public class ExtensionComponentMetadataManager {
                                             .concat(createBuiltInLinks(it),
                                                     it.getLinks() == null ? Stream.empty() : it.getLinks().stream())
                                             .distinct()
-                                            .collect(toList()),
+                                            .toList(),
                                     singletonMap("mapper::infinite", "false")))
                             .collect(toMap(it -> it.getId().getId(), identity(), (a, b) -> {
                                 throw new IllegalArgumentException(a + " and " + b + " are conflicting");
@@ -296,7 +295,7 @@ public class ExtensionComponentMetadataManager {
             if (o == null || getClass() != o.getClass()) {
                 return false;
             }
-            final ActionKey actionKey = ActionKey.class.cast(o);
+            final ActionKey actionKey = (ActionKey) o;
             return hash == actionKey.hash && family.equals(actionKey.family) && type.equals(actionKey.type)
                     && name.equals(actionKey.name);
         }
