@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -239,7 +239,7 @@ public class ProjectGenerator {
                             versionSnapshot)
                     .peek(file -> files.put(file.getPath(), file.getContent()))
                     .map(FacetGenerator.InMemoryFile::getPath)
-                    .collect(toList());
+                    .toList();
         }));
     }
 
