@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ import static java.lang.reflect.Proxy.newProxyInstance;
 import static java.util.Collections.list;
 import static java.util.Optional.of;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.talend.sdk.component.container.Container.State.CREATED;
 
@@ -105,7 +104,7 @@ public class Container implements Lifecycle {
         ofNullable(initializer).ifPresent(i -> i.accept(this));
 
         this.classloaderProvider = () -> {
-            final List<Path> existingClasspathFiles = findExistingClasspathFiles().collect(toList());
+            final List<Path> existingClasspathFiles = findExistingClasspathFiles().toList();
             final URL[] urls = existingClasspathFiles.stream().peek(this::visitLastModified).map(f -> {
                 try {
                     return f.toUri().toURL();
@@ -145,7 +144,8 @@ public class Container implements Lifecycle {
                             : null;
             final ConfigurableClassLoader loader = new ConfigurableClassLoader(id, urls,
                     overrideClassLoaderConfig.getParent(), overrideClassLoaderConfig.getParentClassesFilter(),
-                    overrideClassLoaderConfig.getClassesFilter(), rawNestedDependencies, jvmMarkers);
+                    overrideClassLoaderConfig.getClassesFilter(), rawNestedDependencies, jvmMarkers,
+                    overrideClassLoaderConfig.getParentResourcesFilter());
             transformers.forEach(loader::registerTransformer);
             activeSpecificTransformers(loader);
             return loader;
