@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 package org.talend.sdk.component;
 
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -54,7 +53,7 @@ public class ContainerTest {
     void findDependencies(
             @ContainerProviderRule.Instance("org.apache.xbean:xbean-finder:jar:4.9:runtime") final Container xbeanFinder) {
         assertEquals(singletonList("org.apache.xbean:xbean-finder:jar:4.9"),
-                xbeanFinder.findDependencies().map(Artifact::toCoordinate).collect(toList()));
+                xbeanFinder.findDependencies().map(Artifact::toCoordinate).toList());
     }
 
     @Test
@@ -97,8 +96,8 @@ public class ContainerTest {
                 throw new IllegalStateException(e);
             } catch (final InvocationTargetException e) {
                 final Throwable targetException = e.getTargetException();
-                if (RuntimeException.class.isInstance(targetException)) {
-                    throw RuntimeException.class.cast(targetException);
+                if (targetException instanceof RuntimeException runtimeException) {
+                    throw runtimeException;
                 }
                 throw new IllegalStateException(targetException);
             }
