@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2025 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2026 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@ package org.talend.sdk.component.dependencies.maven;
 
 import static java.lang.ClassLoader.getSystemClassLoader;
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.File;
@@ -33,6 +32,7 @@ import java.util.zip.ZipEntry;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
+import org.talend.sdk.component.container.ContainerManager;
 import org.talend.sdk.component.test.dependencies.DependenciesTxtBuilder;
 
 class MvnDependencyListLocalRepositoryResolverTest {
@@ -60,7 +60,7 @@ class MvnDependencyListLocalRepositoryResolverTest {
                     new MvnDependencyListLocalRepositoryResolver("TALEND-INF/dependencies.txt", d -> null)
                             .resolve(tempLoader, "foo/bar/dummy/1.0.0/dummy-1.0.0.jar")
                             .map(Artifact::toPath)
-                            .collect(toList());
+                            .toList();
             assertEquals(asList("org/apache/tomee/ziplock/8.0.14/ziplock-8.0.14.jar",
                     "org/apache/tomee/javaee-api/7.0-1/javaee-api-7.0-1.jar"), toResolve);
         }
@@ -90,7 +90,31 @@ class MvnDependencyListLocalRepositoryResolverTest {
                     new MvnDependencyListLocalRepositoryResolver("TALEND-INF/dependencies.txt", d -> null)
                             .resolve(tempLoader, "foo/bar/dummy/1.0.0-TCOMP-2285/dummy-1.0.0-TCOMP-2285.jar")
                             .map(Artifact::toPath)
-                            .collect(toList());
+                            .toList();
+            assertEquals(asList("org/apache/tomee/ziplock/8.0.14/ziplock-8.0.14.jar",
+                    "org/apache/tomee/javaee-api/7.0-1/javaee-api-7.0-1.jar"), toResolve);
+        }
+    }
+
+    @Test
+    void resolveWithDynamicDependencies(@TempDir final File temporaryFolder) throws Exception {
+        final File file = new File(temporaryFolder, UUID.randomUUID().toString() + ".jar");
+        file.getParentFile().mkdirs();
+        final String module = ContainerManager.buildAutoIdFromName("dummy-1.0.0.jar");
+        final String deps = "org.apache.tomee:ziplock:jar:8.0.14:runtime,org.apache.tomee:javaee-api:jar:7.0-1:compile";
+        try (final JarOutputStream jar = new JarOutputStream(new FileOutputStream(file))) {
+            jar.putNextEntry(new ZipEntry("TALEND-INF/dynamic-dependencies.properties"));
+            jar.write((module + "=" + deps).getBytes(StandardCharsets.UTF_8));
+            jar.closeEntry();
+        }
+
+        try (final URLClassLoader tempLoader =
+                new URLClassLoader(new URL[] { file.toURI().toURL() }, getSystemClassLoader())) {
+            final List<String> toResolve =
+                    new MvnDependencyListLocalRepositoryResolver("TALEND-INF/dependencies.txt", d -> null)
+                            .resolve(tempLoader, "foo/bar/dummy/1.0.0/dummy-1.0.0.jar")
+                            .map(Artifact::toPath)
+                            .toList();
             assertEquals(asList("org/apache/tomee/ziplock/8.0.14/ziplock-8.0.14.jar",
                     "org/apache/tomee/javaee-api/7.0-1/javaee-api-7.0-1.jar"), toResolve);
         }
